Introduce config file
Give some extensibility and flexibility of configuration.

Additionally, using environment variables for storing secrets exposes
these secrets to other processes in the system. From the Docker Docs
[1]:

    If you’re injecting passwords and API keys as environment
    variables, you risk unintentional information exposure [...]
    Environment variables are often available to all processes, and
    it can be difficult to track access. They can also be printed in
    logs when debugging errors without your knowledge [...]

Voluming in a configuration file keeps those secrets just a little bit
more safe.

For those not using containers, it's also useful to be able to provision
a configuration file through tools like Ansible.

[1] https://docs.docker.com/compose/how-tos/use-secrets/

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,7 @@ services:
     build: .
     ports:
       - "8000:8000"
-    environment:
-      EMAIL_USER: "your-email@example.com"
-      EMAIL_PASS: "your-email-password"
-      IMAP_SERVER: "imap.example.com"
+    volumes:
+      - ./config.toml:/app/config.toml:ro
     restart: always
+    command: ["-c", "config.toml"]
