Allow customization of metrics update interval
60 seconds might be too frequent for some. Or maybe not frequent enough.
It doesn't matter, now we can choose!

--- a/config.example.toml
+++ b/config.example.toml
@@ -16,3 +16,7 @@ folder = "INBOX"
 # (Optional) The port that Prometheus will expose
 # Default: 8000
 port = 8000
+
+# (Optional) The interval (in seconds) between updating metrics
+# Default: 60
+interval = 60
